[project]
name = "homework"
version = "0.1.0"
description = "Домашнее задание по курсу 9.1"
authors = [{name = "Олег"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^6.0.0"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line-length = 119
multi_line_output = 3
